--- a/style.css
+++ b/style.css
@@ -4,13 +4,25 @@ body {
     margin: 20px;
 }
 
-#headline {
-    color: #333;
-    font-style: italic;
-    font-size: 32px;
-    margin-bottom: 20px;
+h1 {
+    margin-top: 0px;
+    margin-bottom: 50px;
     text-align: center;
-}
+    font-family: sans-serif;
+    font-size: 3rem;
+    letter-spacing: 0.15rem;
+    text-transform: uppercase;
+    color: #fff;
+    text-shadow: -4px 4px #ef3550,
+                 -8px 8px #f48fb1,
+                 -12px 12px #7e57c2,
+                 -16px 16px #2196f3,
+                 -20px 20px #26c6da,
+                 -24px 24px #43a047,
+                 -28px 28px #eeff41,
+                 -32px 32px #f9a825,
+                 -36px 36px #ff5722;
+  }
 
 .grid-overall {
     display: grid;
@@ -39,8 +51,6 @@ body {
     background: url(spongAndPat.jpeg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    
-    padding: 20px;
     font-size: 30px;
     text-align: center;
     
@@ -48,15 +58,12 @@ body {
     padding: 25px;
 }
 
-.grid-points {
-    grid-template-columns: auto auto auto auto;
-}
-
+    
 .held {
     filter: brightness(0.7) saturate(150%);
-    box-shadow: 0 0 10px crimson, 0 0 5px crimson inset;
-    border: 2px solid crimson;
+    border: 3px solid;
     transition: all 0.3s ease;
+    animation: colorDice .5s linear 0s infinite;
 }
 
 #turn {
@@ -80,10 +87,57 @@ tr {
 }
 
 label {
+    text-align: center;
+    letter-spacing: 5px;
     color: yellow;
-    -webkit-text-stroke: 0.25px black;
+    animation: colorRotate .5s linear 0s infinite;
 }
 
 input {
     border-radius: 2px;
 }
+
+
+#shadowBox {
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.2);
+    /* Black w/opacity/see-through */
+    border: 3px solid;
+  }
+
+  @keyframes colorRotate {
+    from {
+        -webkit-text-stroke: 0.5px #6666ff;
+    }
+    10% {
+        -webkit-text-stroke: 0.5px #0099ff;
+    }
+    50% {
+        -webkit-text-stroke: 0.5px #00ff00;
+    }
+    75% {
+        -webkit-text-stroke: 0.5px #ff3399;
+    }
+    100% {
+        -webkit-text-stroke: 0.5px #6666ff;
+    }
+  }
+
+  @keyframes colorDice {
+    from {
+        color: #6666ff;
+    }
+    10% {
+        color: #0099ff;
+    }
+    50% {
+        color: #00ff00;
+    }
+    75% {
+        color: #ff3399;
+    }
+    100% {
+        color: #6666ff;
+    }
+  }
