--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1 {
 .grid-overall {
     display: grid;
     padding: 10px;
-    width: 50%;
+    width: 30%;
     margin: auto;
     background-color: #fff;
     border-radius: 8px;
@@ -53,7 +53,7 @@ h1 {
     background-size: 100% 100%;
     font-size: 30px;
     text-align: center;
-    
+    display: grid;
     border: 2px solid black;
     padding: 25px;
 }
